# rocket-rust-web-server

./: .gitignore  Cargo.toml  Rocket.toml  diesel.toml  readme.md  rocket.example.toml
migrations/2024-08-09-202440_create_users/: up.sql
migrations/2024-08-12-112043_create_users/: up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs  user_controller.rs
src/models/: mod.rs
src/routes/: health.rs  user.rs
src/services/: mod.rs  user_service.rs
