[package]
name = "rocket_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.2", features = ["postgres", "sqlite", "returning_clauses_for_sqlite_3_35", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
diesel_cli = { version = "2.2.1", features = ["postgres", "sqlite"] }

